Fix: source path overflowing fixed

--- a/pebblo/reports/templates/index.css
+++ b/pebblo/reports/templates/index.css
@@ -41,6 +41,17 @@ body {
 .w-120 {
   width: 120px;
 }
+.w-70 {
+  width: 70%;
+}
+.max-w-70 {
+  max-width: 70%;
+}
+
+/* HEIGHT */
+.h-2 {
+  height: 8px !important;
+}
 /* DISPLAY PROPERTY */
 .none {
   display: none;
@@ -108,6 +119,7 @@ body {
   width: 1px;
   margin: 2px 0px;
   flex-shrink: 0;
+  height: 100%;
 }
 .divider-horizontal {
   width: 100%;
